// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayNumberText Component Renders with custom props and matches previous snapshot:  1`] = `
<View
  style={
    {
      "paddingBottom": 10,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#FF382B",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
        },
        undefined,
      ]
    }
  >
    22
  </Text>
</View>
`;

exports[`DayNumberText Component Renders with default props and matches previous snapshot:  1`] = `
<View>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "Inter-Regular",
          "fontSize": 18,
        },
        undefined,
      ]
    }
  >
    22
  </Text>
</View>
`;
